<resources>
    <string name="app_name">MultiReminder App</string>
    <string name="title_activity_drawer">activity_drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="reminder_tier_list">Reminder tier list</string>

<!--    Buttons-->
    <string name="menu">Menu</string>
    <string name="comingUpTab">Coming up</string>
    <string name="newReminder">New Reminder</string>
    <string name="macro">Macro Reminders</string>
    <string name="meso">Meso Reminders</string>
    <string name="micro">Micro Reminders</string>
    <string name="settings">Settings</string>
    <string name="active">Active Reminders</string>
    <string name="comingUp">This week</string>
    <string name="update_reminder">Update Reminder</string>

</resources>