<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:text="@string/reminder_tier_list">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            tools:layout_editor_absoluteX="23dp"
            tools:layout_editor_absoluteY="38dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <Button
                android:id="@+id/macroButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="225dp"
                android:text="@string/macro"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/mesoButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/meso"
                app:layout_constraintTop_toBottomOf="@+id/macroButton" />

            <Button
                android:id="@+id/microButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/micro"
                app:layout_constraintTop_toBottomOf="@+id/mesoButton" />

            <Button
                android:id="@+id/newReminder1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:text="Create New Reminder"
                app:layout_constraintTop_toBottomOf="@+id/microButton" />

        </LinearLayout>



        <include
            layout="@layout/toolbar_layout"/>
    </RelativeLayout>
    <com.google.android.material.navigation.NavigationView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/navigationView"
        android:layout_gravity="start"
        app:menu="@menu/drawer_menu"
        app:headerLayout="@layout/header_layout"
        />

</androidx.drawerlayout.widget.DrawerLayout>